Fixed dragging issue. Buttons weird on mobile.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,17 +1,18 @@
 @import-normalize;
-@import 'map.css';
-@import 'button.css';
-@import 'mapList.css';
-@import 'form.css';
-@import 'flash.css';
-@import 'navBar.css';
-@import 'logo.css';
+@import "map.css";
+@import "button.css";
+@import "mapList.css";
+@import "form.css";
+@import "flash.css";
+@import "navBar.css";
+@import "logo.css";
+@import "smallScreenDevices.css";
 
 *,
 *::before,
 *::after {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   box-sizing: border-box;
 }
 body {
