--- a/src/css/form.css
+++ b/src/css/form.css
@@ -50,9 +50,26 @@
   display: flex;
   align-items: flex-end;
 }
-#location, #swap, #save-icon {
+#location,
+#swap,
+#save-icon {
   margin-right: 5px;
 }
 #roundTripMyLocation {
   margin-top: 10px;
+}
+
+@media screen and (max-width: 736px) and (orientation: portrait) {
+  .form-control.dropDownList {
+    margin-bottom: 5px;
+    width: 150px;
+    height: 45px;
+    font-size: 0.9em;
+    font-family: inherit;
+    color: #495057;
+  }
+  #roundTripButton {
+    margin-top: 0px;
+    margin-bottom: 10px;
+  }
 }
